--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html lang="en">
-    <title>n</title>
 <head>
+        <title>n</title>
 </head>
 <body>
-  Hello World!
+    Hello World!
 </body>
 </html>
