added meta viewport

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-        <title>n</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>n</title>
 </head>
 <body>
     Hello World!
